--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="myStyle.css">
 </head>
 <body>
-	<h1>Hello World !!!</h1>
+	<h1>Ola Mundo !!!</h1>
 
 </body>
 </html>
