Hospedagem de site; Aplicando JavaScript ao HTML; Carregamento; Chrome DevTools; Operadores - Aritmético  - Atribuição  - Relacional  - Lógico.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="myStyle.css">
 </head>
 <body>
-	<h1>Ola Mundo !!!</h1>
+	<h1>Aplicando JavaScript na página HTML/CSS !!!</h1>
+	<p id="my-app"></p>
 
+	<script src="myScript.js"></script>
 </body>
 </html>
