Variaveis, Operadores e Controle de fluxo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 	<h1>Aplicando JavaScript na página HTML/CSS !!!</h1>
 	<p id="my-app"></p>
-
+	<h5 id="my-app2"></h5>
+	
 	<script src="myScript.js"></script>
 </body>
 </html>
