--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<p id="my-app"></p>
 	<h5 id="my-app2"></h5>
 	
-	<script src="myScript.js"></script>
+	<!--script src="myScript.js"></script-->
+	<script src="objetos/myScriptObj.js"></script>
+	<!-- src =  source -->
 </body>
 </html>
