Funções JS e Entrada/Saída de dados

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<h5 id="my-app2"></h5>
 	
 	<!--script src="myScript.js"></script-->
-	<script src="objetos/myScriptObj.js"></script>
+	<!-- script src="objetos/myScriptObj.js"></script-->
+	<script src="funcoes/myScriptFunction.js"></script>
 	<!-- src =  source -->
 </body>
 </html>
