--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	<p id="my-app"></p>
 	<h5 id="my-app2"></h5>
 	
-	<!--script src="myScript.js"></script-->
-	<!-- script src="objetos/myScriptObj.js"></script-->
-	<script src="funcoes/myScriptFunction.js"></script>
+	<!-- script src="myScript.js"></script -->
+	<!-- script src="01-objetos/myScriptObj.js"></script -->
+	<!-- script src="02-funcoes/myScriptFunction.js"></script -->
 	<!-- src =  source -->
+	<!-- script src="03-array/myScriptArray.js"></scrip -->
+	<script src="04-strings/myScriptString.js"></script>
 </body>
 </html>
