--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 	<p id="my-app"></p>
 	<h5 id="my-app2"></h5>
 	<!-- src =  source -->
+
+	<h1 id="conteudo">IPW</h1>
+
+	<select name="categoria" id="comboCategoria">
+		<option value="android">Android</option>
+		<option value="ios">IOS</option>
+	</select>
+	</br>
+
+	<p class="laranjado">Botão Laranjado</p>
+
+	<li class="laranjado">
+		<ul>1</ul>
+		<ul>2</ul>
+	</li>
+
+	<div>Vazio</div>
+	<div class="aprovado">
+		<h1>APROVADO</h1>
+	</div>
+
+	<div class="aprovado">
+		<h2>Aprovadissimo</h2>
+	</div>
+
+	<input id="entrada" type="text" value="Nescau">
+
+	<div id="div1">O texto acima foi criado dinamicamente.</div>
+
+	
 	
 	<!-- script src="myScript.js"></script -->
 	<!-- script src="01-variaveis-operadores/myScriptVariaveisOperadores.js"></script-->
@@ -18,6 +48,7 @@
 	<!-- script src="04-funcoes/myScriptFunction.js"></script -->
 	<!-- script src="05-entrada-saida-dados/myScriptEntradaSaidaDados.js"></script -->
 	<!-- script src="06-array/myScriptArray.js"></scrip -->
-	<script src="07-strings/myScriptString.js"></script>
+	<!-- <script src="07-strings/myScriptString.js"></script> -->
+	<script src="08-dom/myScriptDom.js"></script>
 </body>
 </html>
