--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 	<!-- src =  source -->
 	<a href="08-dom/index.html">DOM</a>
 
-	
-	
+	<form>
+		<label for="entradaDados">Entrada de Dados</label>
+		<input type="text" name="entradaDados" id="entradaDados">
+		<button onclick="enviar()">Confirmar</button>
+	</form>
+
+	<form >
+		<label for="nome">Nome</label>
+		<input type="text" name="nome" id="nome">
+		<button id="btnConfirmar">Confirmar</button>
+	</form>
+		
 	<!-- script src="myScript.js"></script -->
 	<!-- script src="01-variaveis-operadores/myScriptVariaveisOperadores.js"></script-->
 	<!-- script src="02-estrutura-fluxo/myScriptEstruturaFluxo.js"></script -->
@@ -23,5 +33,6 @@
 	<!-- script src="06-array/myScriptArray.js"></scrip -->
 	<!-- <script src="07-strings/myScriptString.js"></script> -->
 	<!-- <script src="08-dom/myScriptDom.js"></script> -->
+	<script src="09-eventos/myScriptEventos.js"></script>
 </body>
 </html>
