--- a/11-eventos/index.html
+++ b/11-eventos/index.html
@@ -12,8 +12,7 @@
 <!-- <body onload="console.log('Carreguei toda a página!!!')"> -->
 <!-- <body onresize="console.log('Eu mudei de tamanho!!!')"> -->
 <!-- <body onscroll="console.log('Subindo ou descendo a página!!!')"> -->
-<!-- <body onscroll="myScroll()"> -->
-<body>
+<body onscroll="myScroll()">
     <h1>APLICANDO EVENTOS EM JS</h1>
     <p onclick="chamaFuncao()">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
