web storage - history - geolocalition

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<h5 id="my-app2"></h5>
 	<!-- src =  source -->
 	<a href="08-dom/index.html">DOM</a>
+	<hr>
+	<a href="13-history/index.html">History</a>
 
 	
 	<!-- script src="myScript.js"></script -->
@@ -23,6 +25,7 @@
 	<!-- <script src="07-strings/myScriptString.js"></script> -->
 	<!-- <script src="08-dom/myScriptDom.js"></script> -->
 	<!-- <script src="09-eventos/myScriptEventos.js"></script> -->
-	<script src="10-revisao/myScriptRevisao.js"></script>
+	<!-- <script src="10-revisao/myScriptRevisao.js"></script> -->
+	<!-- <script src="12-web-storage/myScriptStorage.js"></script> -->
 </body>
 </html>
