--- a/16-jQuery/index.html
+++ b/16-jQuery/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1>Aplicando jQuery</h1>
-    <button onclick="slideUp();" id="esconder">Esconder</button>
+    <button id="esconder">Esconder</button>
     <button onclick="slideDown('box');" id="mostrar">Mostrar</button>
     <div id=box></div>
     <script src="js/myScript.js"></script>
